@@ -1,5 +1,9 @@
 2010-06-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Coverage for use of anachronistic variables.
+	* tests/oldvars.test: New test.
+	* tests/Makefile.am: Update.
+
 	Testsuite coverage for bogus macro file serial numbers.
 	* tests/acloca18.test: Also test ill-formed serial numbers
 	and serial numbers after macro definitions.
